syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityString.proto";
import "Vector.proto";
import "LifeByOwnerType.proto";
import "ForwardType.proto";


message EvtCreateGadgetNotify {
	uint64 guid = 5;
	int32 local_id = 1910;
	bool is_true_life_time_by_owner = 2;
	bool is_async_load = 120;
	bool sight_group_with_owner = 10;
	bool is_peer_id_from_player = 91;
	uint32 target_lock_point_index = 14;
	uint32 camp_type = 9;
	uint32 prop_owner_entity_id = 12;
	uint32 born_slot_index = 238;
	uint32 init_pose_id = 629;
	uint32 camp_id = 15;
	uint32 owner_entity_id = 13;
	uint32 target_entity_id = 4;
	uint32 room_id = 11;
	uint32 config_id = 3;
	uint32 entity_id = 1;
	AbilityString ability_name = 1430;
	LifeByOwnerType life_by_owner_type = 1159;
	ForwardType forward_type = 6;
	Vector init_euler_angles = 8;
	Vector init_pos = 7;
	repeated uint32 target_lock_point_index_list = 793;
	repeated uint32 target_entity_id_list = 1696;
}